6594296: NetworkInterface.getHardwareAddress returns zero length byte array

Reviewed-by: alanb